--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <body>
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
-            
+            <h1>Your Name</h1>
+
         </header>
 
         <main class="l-main bd-container">
